--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@apollo/client": "^3.7.11",
+    "@types/react": "^18.0.33",
     "angular-cli-ghpages": "^1.0.5",
     "apollo-angular": "^4.2.1",
     "apollo-angular-link-http": "^1.11.0",
